fixed overflow issues

--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .container {
     height: 15vh;
-    width: 100vw;
+    width: 100%;
     background-color: black;
     display: flex;
     justify-content: center;
