--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .container {
-  height: 85vh;
-  width: 100vw;
+  height: 95vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
